--- a/login.html
+++ b/login.html
@@ -163,7 +163,7 @@ function scrollToTop() {
 }
 
 function redirectToAnotherPage() {
-    window.location.href = 'main.html';
+    window.location.href = 'index.html';
   }
 
   
