--- a/pos.html
+++ b/pos.html
@@ -22,7 +22,7 @@
           
 
                 <div class="logo">
-                    <img src="/Software Design/main_logo.png" class="image_logo">
+                    <img src="main_logo.png" class="image_logo">
                 </div>
                 <h1> Minimat Point of Sale</h1>
 
